# qbiremo-enhanced

./: .copier-answers.yml  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  constraints-dev.txt  pyproject.toml  qbiremo_enhanced.py  qbiremo_enhanced_config_example.toml  qbiremo_enhanced_launch.cmd  qbiremo_enhanced_test.cmd  requirements-dev.txt  requirements.txt  ygit.cmd  yvscode.cmd
.github/workflows/: ci.yml
config/: app.defaults.toml  app.example.toml
docs/architecture/: MEMORY_SPEC.md  qt_composition_playbook.md
qbiremo_enhanced/: __init__.py  __main__.py  config_runtime.py  constants.py  controllers.py  dialogs.py  main_window.py  tasking.py  types.py  utils.py  widgets.py
qbiremo_enhanced/controllers/: __init__.py  actions_taxonomy.py  base.py  details_content.py  filter_table.py  network_api.py  session_ui.py
qbiremo_enhanced/models/: __init__.py  config.py  torrent.py
scripts/policy/: check_standard.py
scripts/windows/: _common.py  run_app.py  run_app_gui.pyw  run_tests.py  setup_env.py
src/qbiremo_enhanced/: config_runtime.py  constants.py  dialogs.py  dialogs_telemetry.py  helpers.py  main_window.py  profile_wizard.py  runtime_paths.py  tasking.py  types.py  utils.py
src/qbiremo_enhanced/controllers/: __init__.py  actions_taxonomy.py  base.py  details_content.py  filter_table.py  network_api.py  session_ui.py
src/qbiremo_enhanced/models/: __init__.py  config.py  torrent.py
src/qbiremo_enhanced/utils/: __init__.py  core.py  logging_config.py
tests/: conftest.py  test_add_torrent_dialog.py  test_config_validation_and_startup.py  test_mainwindow_cache_network_and_status.py  test_mainwindow_debug_edit_content_and_delegation.py  test_mainwindow_filters_and_cache.py  test_mainwindow_filters_details_and_peers.py  test_mainwindow_menus_instances_and_export.py  test_mainwindow_refresh_queue_and_view_reset.py  test_settings_persistence.py
tests/gui/: test_add_torrent_dialog.py  test_mainwindow_cache_network_and_status.py  test_mainwindow_debug_edit_content_and_delegation.py  test_mainwindow_filters_details_and_peers.py  test_mainwindow_menus_instances_and_export.py  test_mainwindow_refresh_queue_and_view_reset.py
tests/integration/: test_config_validation_and_startup.py  test_settings_persistence.py
tests/unit/: test_package_import.py  test_qbiremo_enhanced.py  test_runtime_paths.py
