[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qbiremo-enhanced"
version = "2.0.0"
description = "Advanced qBittorrent GUI client built with PySide6."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6.0",
    "qbittorrent-api>=2024.1.54",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-qt>=4.4.0",
    "ruff>=0.11.0",
    "mypy>=1.11.0",
    "pyright>=1.1.390",
    "pre-commit>=3.7.0",
]

[project.scripts]
qbiremo-enhanced = "qbiremo_enhanced:main"

[tool.setuptools.packages.find]
include = ["qbiremo_enhanced*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
addopts = "-ra --strict-markers --strict-config -W error"

[tool.coverage.run]
source = ["qbiremo_enhanced"]

[tool.coverage.report]
fail_under = 70
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["qbiremo_enhanced", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C90"]
ignore = ["E501"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.format]

[tool.mypy]
python_version = "3.11"
files = ["qbiremo_enhanced"]
ignore_missing_imports = true
follow_imports = "skip"
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "qbiremo_enhanced.models.*",
    "qbiremo_enhanced.types",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = [
    "qbiremo_enhanced.main_window",
    "qbiremo_enhanced.controllers",
    "qbiremo_enhanced.controllers.*",
]
disable_error_code = [
    "has-type",
    "var-annotated",
    "unreachable",
    "no-any-return",
    "redundant-cast",
]

[tool.pyright]
include = ["qbiremo_enhanced"]
typeCheckingMode = "basic"
pythonVersion = "3.11"
