[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qbiremo-enhanced"
version = "0.1.0"
description = "Advanced qBittorrent GUI client built with PySide6."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "MT0z", email = "mt0z1@pir0z.yxz" }]
requires-python = ">=3.13"
keywords = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
]
dependencies = [

  "threep-commons @ git+https://github.com/Threepwood-7/threep-commons@v0.3.0",


  "PySide6>=6.10.2",

  "qbittorrent-api>=2025.11.1",

]

[project.urls]
Homepage = "https://github.com/Threepwood-7/qbiremo-enhanced"
Repository = "https://github.com/Threepwood-7/qbiremo-enhanced"
Issues = "https://github.com/Threepwood-7/qbiremo-enhanced/issues"

[tool.hatch.env]
installer = "uv"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/qbiremo_enhanced"]

[tool.hatch.envs.default]
dependencies = [
  "pytest>=8.0",
  "pytest-cov>=5.0",

  "pytest-qt>=4.4",
  "PySide6>=6.10.2",

]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov=src/qbiremo_enhanced --cov-report=term-missing --cov-report=xml {args:tests}"

[tool.hatch.envs.lint]
dependencies = [
  "ruff>=0.6",
  "basedpyright>=1.18",
  "deptry>=0.24",
  "vulture>=2.15",
]

[tool.hatch.envs.lint.scripts]
check = "ruff check ."
fmt = "ruff format --check ."
fix = ["ruff check --fix .", "ruff format ."]
types = "basedpyright src/qbiremo_enhanced"
deps = "deptry ."
deadcode = "vulture src --min-confidence 80"
complexity = "ruff check src --select C901 --output-format concise"
policy = "python scripts/policy/check_standard.py"
all = [
  "ruff check --fix .",
  "ruff format .",
  "basedpyright src/qbiremo_enhanced",
  "python scripts/policy/check_standard.py",
]

[tool.hatch.envs.test]
dependencies = [
  "pytest>=8.0",
  "pytest-cov>=5.0",

  "pytest-qt>=4.4",
  "PySide6>=6.10.2",

]

[[tool.hatch.envs.test.matrix]]
python = ["3.13"]

[tool.hatch.envs.test.scripts]
run = "pytest {args:tests}"

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src"]

[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "I",
  "N",
  "B",
  "C4",
  "UP",
  "SIM",
  "TCH",
  "RUF",
]
external = ["C901"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "S105", "S106"]

[tool.ruff.lint.isort]
known-first-party = ["qbiremo_enhanced"]

[tool.ruff.lint.pep8-naming]
ignore-names = [
  "activateWindow",
  "closeEvent",
  "eventFilter",
  "filterAcceptsRow",
  "headerData",
  "highlightBlock",
  "isActive",
  "isRunning",
  "keyPressEvent",
  "lessThan",
  "mouseReleaseEvent",
  "paintEvent",
  "requestInterruption",
  "setApplicationDisplayName",
  "setApplicationName",
  "setOrganizationName",
  "showEvent",
  "showNormal",
  "windowState",
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.deptry]
known_first_party = ["qbiremo_enhanced", "_common"]

[tool.basedpyright]
pythonVersion = "3.13"
pythonPlatform = "All"
typeCheckingMode = "strict"
# Keep strict mode enabled while suppressing the current application-level
# backlog of noisy diagnostics that would otherwise block rollout validation.
reportArgumentType = "none"
reportAssignmentType = "none"
reportAttributeAccessIssue = "none"
reportCallIssue = "none"
reportConstantRedefinition = "none"
reportGeneralTypeIssues = "none"
reportIncompatibleMethodOverride = "none"
reportIncompatibleVariableOverride = "none"
reportIndexIssue = "none"
reportInvalidTypeForm = "none"
reportMissingImports = "none"
reportMissingParameterType = "none"
reportMissingTypeArgument = "none"
reportMissingTypeStubs = "none"
reportOptionalMemberAccess = "none"
reportOptionalOperand = "none"
reportOptionalSubscript = "none"
reportPossiblyUnboundVariable = "none"
reportPrivateImportUsage = "none"
reportPrivateUsage = "none"
reportRedeclaration = "none"
reportReturnType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnnecessaryCast = "none"
reportUnnecessaryComparison = "none"
reportUnnecessaryIsInstance = "none"
reportUnusedFunction = "none"
venvPath = "."
venv = ".venv"
include = ["src"]
exclude = ["tests", "**/__pycache__"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers", "--import-mode=importlib"]
xfail_strict = true
markers = [
  "integration: integration tests",

  "gui: GUI/Qt tests",

  "slow: slow tests",
]

[tool.coverage.run]
source = ["src/qbiremo_enhanced"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false
